--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,11 @@ jobs:
 
       - name: Merge upstream
         run: |
-          git checkout main
-          git merge upstream/main --no-edit
+          git checkout master
+          git merge upstream/master --no-edit
 
       - name: Push to origin
-        run: git push origin main
+        run: git push origin master
 
       - name: Set up Python
         uses: actions/setup-python@v4
