--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,33 +3,32 @@ name: Sync, Build & Deploy MK4
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *'    # every day at 02:00 UTC (04:00 Berlin)
+    - cron: '0 2 * * *'    # 02:00 UTC / 04:00 Berlin
 
 jobs:
   sync-build:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Checkout
-      - name: Checkout fork
-        uses: actions/checkout@v4
+      # 1. Checkout & sync
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           ref: master
 
-      # 2. Upstream merge
-      - name: Add & fetch prusa3d upstream
+      - name: Add & fetch upstream
         run: |
           git remote add upstream https://github.com/prusa3d/Prusa-Firmware-Buddy.git
           git fetch upstream
+
       - name: Merge upstream/master
         run: |
           git checkout master
           git merge upstream/master --no-edit
-      - name: Push merged master
+
+      - name: Push merge back
         run: git push origin master
 
-      # 3. Install system-level build tools
+      # 2. System toolchain
       - name: Install ARM toolchain & build tools
         run: |
           sudo apt-get update
@@ -39,32 +38,30 @@ jobs:
             binutils-arm-none-eabi \
             libnewlib-arm-none-eabi
 
-      # 4. Set up Python & Python deps
+      # 3. Python + deps
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-      - name: Install Python requirements
-        run: python -m pip install -r requirements.txt
 
-      # 5. (Optional) Show workspace contents for debug
-      - name: List all files
-        run: ls -R .
+      - name: Install Python dependencies
+        run: python -m pip install --upgrade pip && pip install -r requirements.txt
 
-      # 6. Build MK4 in release mode
+      # 4. Build without switching into .venv
       - name: Build MK4 (release)
+        env:
+          BUDDY_NO_VIRTUALENV: '1'
         run: python utils/build.py --preset mk4 --build-type release
 
-      # 7. Upload artifact
+      # 5. Artifacts & release
       - name: Upload firmware artifact
         uses: actions/upload-artifact@v4
         with:
           name: PrusaBuddy-MK4-release
           path: build/products/**
 
-      # 8. GitHub Release
-      - name: Create GitHub Release
-        id: create_release
+      - id: create_release
+        name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.sha }}
