--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,12 @@ jobs:
           fetch-depth: 0
           ref: master
 
+      - name: Set up Git user identity
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+
       - name: Add upstream remote & fetch
         run: |
           git remote add upstream https://github.com/prusa3d/Prusa-Firmware-Buddy.git
