--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,6 +80,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Free up disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          docker system prune -af
+
       - name: Install Python dependencies
         run: python -m pip install --upgrade pip && pip install -r requirements.txt
 
